<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/tasksFragment"
        android:icon="@drawable/ic_tasks"
        android:title="@string/nav_tasks" />

    <item
        android:id="@+id/plannerFragment"
        android:icon="@drawable/ic_planner"
        android:title="@string/nav_planner" />

    <item
        android:id="@+id/timerFragment"
        android:icon="@drawable/ic_timer"
        android:title="@string/nav_timer" />

    <item
        android:id="@+id/insightsFragment"
        android:icon="@drawable/ic_insights"
        android:title="@string/nav_insights" />

    <item
        android:id="@+id/notesFragment"
        android:icon="@drawable/ic_notes"
        android:title="@string/nav_notes" />
</menu>
